# RusticReach

./: .gitignore  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  client.yml  server.yml
assets/data/: random_messages.txt
scripts/: client_simulation.sh
src/: client.rs  lib.rs  main.rs  mod.rs  server.rs
src/client/: auth.rs  client_runtime.rs  config.rs  main.rs  mod.rs  runtime.rs  state.rs
src/core/: messages.rs  mod.rs  room.rs  user.rs
src/core/room/: room.rs
src/core/user/: role.rs  user.rs
src/frontend/: index.html  script.js  style.css
src/server/: config.rs  main.rs  mod.rs  room.rs  server.rs  server_commands.rs  server_main.rs  user.rs
src/server/handlers/: command_handlers.rs  mod.rs  ws_handlers.rs
src/shared/: command.rs  commands.rs  constants.rs  formatted_messages.rs  mod.rs
src/shared/cmd/: command.rs  commands.rs  message_commands.rs  mod.rs
src/utils/: args.rs  constants.rs  formatted_messages.rs  hash.rs  mod.rs  startup_ui.rs  terminal_ui.rs  time.rs  traits.rs
src/utils/cmd/: command.rs
