[package]
name = "rustic_reach"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-ws = "0.3.0"
awc = "3.5.1"
futures-util = "0.3.31"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"


[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

# Web Socket server run 
[[bin]] 
name = "server"
path = "src/server.rs"

# Web socket client 
[[bin]] 
name = "client"
path = "src/client.rs"
